add spaces overview

--- a/spaceDetail.html
+++ b/spaceDetail.html
@@ -12,7 +12,7 @@
 <nav>
     <a href="index.html"><img src="img/logo.svg" class="logo" alt="Logo"></a>
     <a href="locations.html">Lokasjoner</a>
-    <a href="spaces.html">Hensettingsplasser</a>
+    <a href="spaces.html" class="current-nav">Hensettingsplasser</a>
     <a href="reservations.html">Reservasjoner</a>
     <a href="createReservation.html">Reserver</a>
 </nav>
