--- a/spaces.html
+++ b/spaces.html
@@ -16,9 +16,35 @@
     <a href="reservations.html">Reservasjoner</a>
     <a href="createReservation.html">Reserver</a>
 </nav>
-<h1>Hensetting</h1>
-<h2>Bilde av Sandnes stasjon</h2>
-<img src="img/tog_ved_stasjon.jpg" class="tog-ved-stasjon" alt="Tog ved Sandnes stasjon">
+<h1>Hensettingsplasser</h1>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Navn</th>
+        <th>Beskrivelse</th>
+    </tr>
+    </thead>
+    <tbody id="spaces-table-body"></tbody>
+</table>
+<script>
+    const spacesTableBody = document.querySelector('tbody#spaces-table-body');
+
+    fetch('http://f21-eksempel.azurewebsites.net/spaces')
+        .then(response => response.json())
+        .then(spaces => {
+            for (const spaceObject of spaces) {
+                spacesTableBody.insertAdjacentHTML(
+                    'beforeend',
+                    `<tr>
+    <td><a href="spaceDetail.html#${spaceObject.id}">${spaceObject.id}</a></td>
+        <td>${spaceObject.name}</td>
+        <td>${spaceObject.description}</td>
+    </tr>`);
+            }
+        });
+
+</script>
 </body>
 
 </html>
