correct nav class in reservations

--- a/reservationDetail.html
+++ b/reservationDetail.html
@@ -13,7 +13,7 @@
     <a href="index.html"><img src="img/logo.svg" class="logo" alt="Logo"></a>
     <a href="locations.html">Lokasjoner</a>
     <a href="spaces.html">Hensettingsplasser</a>
-    <a href="reservations.html">Reservasjoner</a>
+    <a href="reservations.html" class="current-nav">Reservasjoner</a>
     <a href="createReservation.html">Reserver</a>
 </nav>
 <h1>Reservasjon</h1>
